# sum_type

./: .travis.yml  Cargo.toml  README.md  aliases.js  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/sum_type/: trait.SumType.js
src/: lib.rs
src/sum_type/: lib.rs.html
sum_type/: InvalidType.t.html  SingleThing.t.html  Thing.t.html  __sum_type_trait.m.html  __sum_type_try_from.m.html  all.html  enum.SingleThing.html  enum.Thing.html  index.html  macro.__assert_multiple_variants!.html  macro.__assert_multiple_variants.html  macro.__sum_type_from!.html  macro.__sum_type_from.html  macro.__sum_type_impls!.html  macro.__sum_type_impls.html  macro.__sum_type_trait.html  macro.__sum_type_try_from.html  macro.sum_type.html  struct.InvalidType.html  trait.SumType.html
sum_type/generated_example/: MySumType.t.html  enum.MySumType.html  index.html  sidebar-items.js
